# windows-process-audio-capture

./: CMakeLists.txt  README.md  audio-channel.c  audio-channel.h  plugin-main.c  wasapi-capture.c  wasapi-capture.h  wasapi-hook-info.h  windows-helpers.cpp
get-wasapi-offsets/: CMakeLists.txt  get-wasapi-offsets.cpp
inject-helper/: CMakeLists.txt  inject-helper.c
wasapi-hook/: CMakeLists.txt  circlebuf.h  wasapi-capture.cpp  wasapi-hook.c  wasapi-hook.h  wasapi_capture_proxy.cpp  wasapi_capture_proxy.h  wasapi_capturer.cpp  wasapi_capturer.h
